--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "screenfull": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "/SeatChangerReact/",
+  "homepage": "/SeatChangerReactPublic/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
