--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "lxgw-wenkai-lite-webfont": "^1.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "screenfull": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "/SeatChangerReactPublic/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
