--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "screenfull": "^6.0.2",
-    "web-vitals": "^2.1.4"
+    "screenfull": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
